uf_ulog_macro/tests/ui/fail_missing_timestamp.stderr
error: ULog message must contain a `timestamp: u64` field
 --> tests/ui/fail_missing_timestamp.rs:2:8
  |
2 | struct MissingTimestamp {
  |        ^^^^^^^^^^^^^^^^
