uf_ulog_macro/tests/ui/fail_missing_timestamp.rs
#[derive(uf_ulog_macro::ULogData)]
struct MissingTimestamp {
    x: f32,
}

fn main() {}
